syntax = "proto3";

package user;

option go_package = "/user";

service UserService {
  rpc createUser(CreateUserParams) returns (UserId);
  rpc getUser(UserId) returns (User);
}

message User {
  string id = 1;
  string username = 2;
  string nickname = 3;
  string email = 4;
  string createdAt = 5;
}

message UserId {
  string value = 1; 
}

message CreateUserParams {
  string id = 1;
  string username = 2;
  string password = 3;
  string nickname = 4;
  string email = 5;
}
